--- a/css/scss/components/_septionGuests.scss
+++ b/css/scss/components/_septionGuests.scss
@@ -35,7 +35,7 @@
         margin-bottom: 1rem;
     }
     img{
-        width: 60%;
+        width: 45%;
     }
     h4{
         font-size: 1.5rem;
@@ -61,8 +61,6 @@
 .septionGuests__article1--3{
     @extend .septionGuests__article1;
 }
-
-
 @media (min-width:36rem){
     .septionGuests__container{
         flex-direction: row;
@@ -72,6 +70,9 @@
     }
     .septionGuests__article1{
         width: 45%;
+        img{
+            width: 60%;            
+        }
         >*{
             margin-bottom: 1.2rem;
         }
