--- a/index.pug
+++ b/index.pug
@@ -47,15 +47,15 @@ html(lang="en")
 					| counts len					 
 			small 
 				b More info on:                
-				a(class="aside__visitUrl",href="www.yourwebsite.com") www.yourwebsite.com
+				a(class="aside__visitUrl",href="#") www.yourwebsite.com
 		footer(class="footer")
 			article(class="footer__container")
 				ul(class="footer__ul")
-					li(class="footer__li") /conference
-					li(class="footer__li--2") /conference
-					li(class="footer__li--3") /conference
-					li(class="footer__li--4") /conference
-				span(class="footer__span") sponsored by Learning
+					li(class="footer__li"): a(href="#") /conference
+					li(class="footer__li--2"): a(href="#") /conference
+					li(class="footer__li--3"): a(href="#") /conference
+					li(class="footer__li--4"): a(href="#") /conference
+				em(class="footer__span"): a(href="http://www.freepik.com") Designed by Freepik
 				
 		
 
