--- a/index.pug
+++ b/index.pug
@@ -55,7 +55,7 @@ html(lang="en")
 					li(class="footer__li--2"): a(href="#") /conference
 					li(class="footer__li--3"): a(href="#") /conference
 					li(class="footer__li--4"): a(href="#") /conference
-				em(class="footer__span"): a(href="http://www.freepik.com") Designed by Freepik
+				em(class="footer__span"): a(href="http://www.freepik.com" target="_blank") Designed by Freepik
 				
 		
 
