--- a/index.pug
+++ b/index.pug
@@ -26,12 +26,12 @@ html(lang="en")
 					p Lorem ipsum dolor sit amet consectetur.
 				article(class="septionGuests__article1--2")
 					span Lorem.
-					img(srcset="images/woman-small.png 200w, images/woman.png 429w",sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw", alt="", src="images/woman.png")
+					img(srcset="images/woman-small.png 200w, images/woman.png 429w",sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw", alt="mujer", src="images/woman.png")
 					h4 Lorem, ipsum dolor.
 					p Lorem ipsum dolor sit amet consectetur.
 				article(class="septionGuests__article1--3")
 					span Lorem.
-					img(srcset="images/woman1-small.png 200w, images/woman1.png 429w",sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw", alt="", src="imges/woman-1.png")
+					img(srcset="images/woman1-small.png 200w, images/woman1.png 429w",sizes="(min-width=75rem) 8vw, (min-width=75rem) 100vw", alt="mujer", src="imges/woman-1.png")
 					h4 Lorem, ipsum dolor.
 					p Lorem ipsum dolor sit amet consectetur.
 		aside(class="aside")
@@ -51,10 +51,10 @@ html(lang="en")
 		footer(class="footer")
 			article(class="footer__container")
 				ul(class="footer__ul")
-					li(class="footer__li"): a(href="#") /conference
-					li(class="footer__li--2"): a(href="#") /conference
-					li(class="footer__li--3"): a(href="#") /conference
-					li(class="footer__li--4"): a(href="#") /conference
+					li(class="footer__li"): a(href="#" class="link fab fa-facebook-f") /conference
+					li(class="footer__li"): a(href="#" class="link fab fa-twitter") /conference
+					li(class="footer__li"): a(href="#" class="link fab fa-instagram") /conference
+					li(class="footer__li"): a(href="#" class="link fab fa-whatsapp") /conference
 				em(class="footer__span"): a(href="http://www.freepik.com" target="_blank") Designed by Freepik
 				
 		
